--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,10 +7,11 @@ security:
     role_hierarchy:
           ROLE_ADMIN:       ROLE_USER
           ROLE_SUPER_ADMIN: ROLE_ADMIN
+          ROLE_CLIENT:       ROLE_CLIENT
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
          fos_userbundle:
-                        id: fos_user.user_provider.username
+                        id: fos_user.user_provider.username_email
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -21,15 +22,30 @@ security:
         main:
             pattern: ^/
             form_login:
+               login_path:    fos_user_security_login
+               check_path:    fos_user_security_check
+               always_use_default_target_path : true
+               default_target_path: /home
+               use_referer : true
                provider: fos_userbundle
                csrf_token_generator: security.csrf.token_manager
 
-            logout:       true
+            logout:
+                path:          fos_user_security_logout
+                target:        fos_user_security_login
             anonymous:    true
+            remember_me:
+                secret:        "%secret%"
+                lifetime:      604800
+                path:          /
+                domain:        ~
 
     access_control:
             - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
             - { path: ^/admin/, role: ROLE_ADMIN }
+            - { path: ^/newannonce, role: ROLE_CLIENT }
+            - { path: ^/gest, role: ROLE_ADMIN }
+
 
