--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,8 @@ ads_adverts:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+easy_admin_bundle:
+    resource: "@EasyAdminBundle/Controller/AdminController.php"
+    type: annotation
+    prefix: /naissam
