--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,8 +63,8 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: '%mailer_transport%'
-    host: '%mailer_host%'
+    transport: 'smtp'
+    host: 'localhost'
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
